apps/oidc/httpbin-ingress-oidc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: httpbin-oidc
  namespace: default
  labels:
    app: httpbin
  annotations:
    konghq.com/plugins: "httpbin-oidc"
spec:
  ports:
  - name: http
    port: 80
    targetPort: 80
  selector:
    app: httpbin
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: httpbin-oidc
  namespace: default
  annotations: 
    konghq.com/strip-path: "true"
    konghq.com/plugins: "httpbin-oidc"
spec:
  ingressClassName: kong
  rules:
  - http:
      paths:
      - path: /uuid
        pathType: Prefix
        backend:
          service:
            name: httpbin-oidc
            port:
              number: 80
